@@ -11,10 +11,10 @@ exit_status=$?
 if test $exit_status = 0; then
   # should have three instances of _included_,
   # and three of {included}.
-  count=`grep _included_ include-value.info | wc -l`
+  count=`grep -c _included_ include-value.info`
   test $count = 3 || exit_status=`expr $exit_status + 1`
 
-  count=`grep '{included}' include-value.info | wc -l`
+  count=`grep -c '{included}' include-value.info`
   test $count = 3 || exit_status=`expr $exit_status + 1`
 fi
 
